# cairo0-starter

./: README.md  cairo0_rustlings.py  conftest.py  exercise_order.toml  pyproject.toml  pytest.ini
.trunk/: trunk.yaml
exercises/builtins/: bitwise.cairo
exercises/hints/: README.md  hints00.cairo  hints00.py  hints01.cairo  hints01.py
exercises/implicit_arguments/: implicit_arguments01.cairo  implicit_arguments01.py  implicit_arguments02.cairo  implicit_arguments03.cairo  implicit_arguments03.py
exercises/operations/: README.md  operations00.cairo  operations01.cairo  operations02.cairo  operations02.py  operations03.cairo
exercises/recursions/: array01.cairo  array01.py  array02.cairo  array03.cairo  array03.py  array04.cairo  array04.py  collatz_sequence.cairo  recursion01.cairo  struct01.cairo
exercises/registers/: registers00.cairo  registers00.py  registers01.cairo  registers01.py  registers02.cairo  registers02.py  registers03.cairo  registers03.py  registers04.cairo  registers04.py
exercises/revoked_references/: revoked_references01.cairo
exercises/storage/: storage01.cairo  storage02.cairo  storage03.cairo
exercises/strings/: strings00.cairo  strings00.py  strings01.cairo
exercises/syntax/: syntax01.cairo  syntax02.cairo  syntax03.cairo  syntax03.py  syntax04.cairo  syntax05.cairo
exercises/tricks/: assert_bool.cairo  assert_bool.py  inline_if.cairo  inline_if.py  no_conditionals.cairo
solutions/builtins/: README.md  bitwise.cairo  bitwise.py
solutions/hints/: hints01.cairo
solutions/implicit_arguments/: implicit_arguments01.cairo  implicit_arguments02.cairo  implicit_arguments02.py  implicit_arguments03.cairo
solutions/operations/: README.md  operations00.cairo  operations00.py  operations01.cairo  operations01.py  operations02.cairo  operations02.py  operations03.cairo  operations03.py
solutions/recursions/: array01.cairo  array02.py  collatz_sequence.cairo  collatz_sequence.py  recursion01.cairo  recursion01.py  struct01.cairo  struct01.py
solutions/registers/: registers00.cairo  registers01.cairo  registers02.py  registers04.cairo  registers04.py
solutions/revoked_references/: revoked_references01.cairo  revoked_references01.py
solutions/strings/: README.md  strings00.cairo  strings01.cairo  strings01.py
solutions/syntax/: syntax01.cairo  syntax01.py  syntax02.cairo  syntax03.cairo  syntax04.cairo  syntax04.py  syntax05.cairo  syntax05.py
solutions/tricks/: assert_bool.cairo  inline_if.cairo  no_conditionals.cairo  no_conditionals.py
utils/: profiling.py  serde.py
