[project]
name = "cairo0-starter"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.11"
readme = "README.md"
dependencies = [
  "starknet-py>=0.20.0,<0.21",
  "cairo-lang>=0.13.2",
  "pytest>=8.1.1,<9",
  "pytest-asyncio~=0.21.0",
  "toml>=0.10.2,<0.11",
  "pandas>=1.5.1,<2",
  "black>=22.10.0,<23",
  "isort>=5.10.1,<6",
  "pytest-xdist[psutil]>=3.0.2,<4",
  "setuptools>=68.2.0,<69",
  "pyperclip>=1.8.2,<2",
  "tabulate>=0.9.0,<0.10",
  "pytest-env>=1.1.3,<2",
  "ipykernel>=6.29.4,<7",
  "polars>=1.26.0",
]

[project.scripts]
cairo0-rustlings = "cairo0_rustlings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]


[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Using or importing the ABCs:DeprecationWarning",                                # from frozendict
  "ignore:lexer_state will be removed in subsequent releases. Use lexer_thread instead.", # from lark
  "ignore:abi:DeprecationWarning",                                                        # from web3
  "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",                            # from marshmallow
]

pythonpath = ["."]
python_files = "*.py"

asyncio_mode = "auto"
env = [
  "PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = python",
  "PYDEVD_WARN_SLOW_RESOLVE_TIMEOUT = 3",
]


[tool.isort]
profile = "black"

[tool.autoflake]
in_place = true
remove_unused_variables = true
remove_all_unused_imports = true

[tool.codespell]
ignore-words = '.codespellignore'
skip = '.git'
check-filenames = ''
check-hidden = ''

[tool.bandit]
exclude_dirs = ["tests"]
